# paillier-zk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/: changelog.sh
.github/workflows/: rust.yml
examples/: pregenerate.rs
src/: _doctest.rs  common.rs  curve.rs  group_element_vs_paillier_encryption_in_range.rs  lib.rs  multiexp.rs  no_small_factor.rs  paillier_affine_operation_in_range.rs  paillier_blum_modulus.rs  paillier_decryption_modulo_q.rs  paillier_encryption_in_range.rs  range_proof_with_elgamal_commitment.rs  sqrt.rs
src/common/: hash2field.rs  rng.rs  sqrt.rs
test-data/: prover_decryption_key.json  prover_encryption_key.json  someone_encryption_key.json  someone_encryption_key0.json  someone_encryption_key1.json  verifier_aux.json
