[package]
name = "paillier-zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m" }
rand_core = { version = "0.6", default-features = false }
digest = "0.10"
fast-paillier = { git = "https://github.com/dfns-labs/fast-paillier", branch = "m" }
rug = { version = "1.21", default-features = false, features = ["integer", "rand"] }

thiserror = "1"

serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", default-features = false, features = ["macros"], optional = true }

[dev-dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", features = ["all-curves"] }
rand_dev = { version = "0.1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }

subtle = { version = "2.4", default-features = false }
zeroize = { version = "1.5", default-features = false }

anyhow = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde", "dep:serde_with", "generic-ec/serde", "rug/serde", "fast-paillier/serde"]

# This features is exlusively used for `cargo test --doc`
__internal_doctest = ["serde"]

[[example]]
name = "pregenerate"
required-features = ["serde"]
